This file describes the changes to the Log for C++ library. See the CVS repository for more detailed descriptions.

2002-07-02 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* include/log4cpp/HierarchyMaintainer.hh, include/log4cpp/Category.hh,
	src/HierarchyMaintainer.cpp, src/Category.cpp:
	Changed return type of getCurrentCategories() to std:vector<Category>.
	vector<> is more efficient than set<> and works around MSVC++ DLL 
	export brain damage, see Microsoft Q168958.

	* include/log4cpp/Configurator.hh, include/log4cpp/ConfiguratorSkeleton.hh, 
	include/log4cpp/SimpleConfigurator.hh, include/log4cpp/PropertyConfigurator.hh,
	src/Configurator.cpp, src/ConfiguratorSkeleton.cpp, src/SimpleConfigurator.cpp,
	src/PropertyConfigurator.cpp: integrated PropertyConfigurator contributed by
	Alan Anderson <alan@rushmore.com>.

	* msvc6/log4cpp/log4cpp.dsp, bcb5/log4cpp/log4cpp.bpf, bcb5/log4cpp/log4cpp.bpr,
	 bcb5/log4cpp/log4cpp.mak: added PropertyConfigurator files.
	
2002-06-19 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/Makefile.am: added NTEventlog.cpp and DllMain.cpp to sources.
	* src/DllMan.cpp: enclosed in #ifdef LOG4CPP_SUPPLY_DLLMAIN
	* include/log4cpp/config-win32.h: #define LOG4CPP_SUPPLY_DLLMAIN
	* include/log4cpp/Makefile.am: added NTEventLog.hh
	* msvc6/Makefile.am: added NTEventLogCategories.
	
2002-06-18 Bastiaan Bakker <bastiaan.bakker@lifeline.nl>
	* src/NDC.cpp: fix top level context falling off, if depth > 2.
	(reported by Hong Yang <yanghong2009@yahoo.com>)
	* tests/testNDC.cpp: push 3 contexts to test for bug above.
	
2002-06-17 Aaron Ingram <ai8@yahoo.com>
	* Fixed default port for syslog in SimpleConfigurator.cpp
	* Added a sample configuration file: log4cpp.cfg 

2002-06-17 David Resnick <dresnick@mobilespear.com>
    * Merge of MS Threads & DLL Build support patch by Aaron Ingram <ai8@yahoo.com>
    with these changes:
    * src/main.cpp renamed to src/DllMain.cpp
    * Run-time library used for log4cppDLL changed to