@@ -53,7 +53,7 @@ namespace log4cpp {
     }
 
     void ConfiguratorSkeleton::addAppenders(std::string& categoryName) throw (ConfigureFailure) {
-        int length;
+        std::string::size_type length;
         std::string tempCatName;
         std::string leftString, rightString, priority;
         std::list<std::string> tokens;
@@ -69,11 +69,8 @@ namespace log4cpp {
             throw ConfigureFailure(std::string("Unable to find category: ") + tempCatName);
 
         // need to get the root instance of the category
-        if (categoryName.compare("rootCategory") == 0) {
-            category = &Category::getRoot();
-        } else {
-            category = &Category::getInstance(categoryName);
-        }
+        category = (categoryName == "rootCategory") ?
+            &Category::getRoot() : &Category::getInstance(categoryName);
 
         // if string is not ", appender.." or "" then we only want to set priority ???
         length = (*iter).second.find(",");
@@ -99,285 +96,146 @@ namespace log4cpp {
         category->removeAllAppenders();
 
         // loop through the list and either set the priority or add the appender
-        std::list<std::string>::iterator list_iter = tokens.begin();
-
-        for (; list_iter != tokens.end(); list_iter++) {
+        for(std::list<std::string>::const_iterator list_iter = tokens.begin();
+            list_iter != tokens.end(); list_iter++) {
             std::string name = trim(*list_iter);
 
-            if (!setPriority(name, *category)) {
+            try {
+                category->setPriority(Priority::getPriorityValue(name));
+            } catch(std::invalid_argument& e) {
                 // not a priority, so it must be an appender
                 configAppender(name, *category);
             }
         }
-
     }
 
     void ConfiguratorSkeleton::configAppender(std::string& name, Category& category) {
-        std::string appender_type, tempString;
-        PropertiesMap::iterator iter = _properties.begin();
-		
         // we're given the appender name, so get the property associated with it
-        tempString = std::string("appender.") + name;
-        PropertiesMap::iterator key = _properties.find(tempString);
+        PropertiesMap::iterator key = _properties.find(std::string("appender.") + name);
 
-        if (key != _properties.end()) {
-
+        if (key == _properties.end()) {
+            // XXX bb: shouldn't we complain?
+        } else {
             // instantiate the appender
             Appender* appender = instantiateAppender(name);
 			
             // and set it to the category
-            category.setAppender(appender);
+            category.addAppender(appender);
         }
     }
 
-    Appender* ConfiguratorSkeleton::instantiateAppender(const std::string& name) {
+    Appender* ConfiguratorSkeleton::instantiateAppender(const std::string& appenderName) {
         Appender* appender = NULL;
 
-        // determine the type by the name 
-        std::string tempString = std::string("appender.") + name;
-        std::string appender_type, objectname;
-        PropertiesMap::iterator key = _properties.find(tempString);
-
+        // determine the type by the appenderName 
+        PropertiesMap::iterator key = _properties.find(std::string("appender.") + appenderName);
         if (key == _properties.end())
-            throw ConfigureFailure(std::string("Invalid appender name: see") + name);
+            throw ConfigureFailure(std::string("Appender '") + appenderName + "' not defined");
 		
-        int length = (*key).second.find_last_of(".");
-
-        if (length != std::string::npos)
-            appender_type = (*key).second.substr(length+1);
-        else
-            appender_type = (*key).second;
+        std::string::size_type length = (*key).second.find_last_of(".");
+        std::string appenderType = (length == std::string::npos) ?
+            (*key).second : (*key).second.substr(length+1);
 
         // and instantiate the appropriate object
-        if (appender_type.compare("ConsoleAppender") == 0) {
-            tempString = std::string("appender.") + name + std::string(".name");
-            PropertiesMap::iterator key = _properties.find(tempString);
-
-            if (key == _properties.end())
-                objectname = "default";
-            else
-                objectname = (*key).second;
-
-            // create the appender
-            appender = new OstreamAppender(objectname, &std::cout);
-
-            // set layout
-            setLayout(appender, name);
+        if (appenderType == "ConsoleAppender") {
+            appender = new OstreamAppender(appenderName, &std::cout);
         }
+        else if (appenderType == "FileAppender") {
+            key = _properties.find(std::string("appender.") + appenderName + ".fileName");
+            std::string fileName = (key == _properties.end()) ? "foobar" : (*key).second;
 
-        if (appender_type.compare("FileAppender") == 0) {
-            std::string filename;
-            tempString = std::string("appender.") + name + std::string(".name");
-            PropertiesMap::iterator key = _properties.find(tempString);
-
-            if (key == _properties.end())
-                objectname = "default";
-            else
-                objectname = (*key).second;
-
-            tempString = std::string("appender.") + name + std::string(".Filename");
-            key = _properties.find(tempString);
-
-            if (key == _properties.end())
-                filename = "foobar";	// default file name
-            else
-                filename = (*key).second;
-
-            appender = new FileAppender(objectname, filename);
-
-            // set layout
-            setLayout(appender, name);
+            appender = new FileAppender(appenderName, fileName);
         }
-
-        if (appender_type.compare("SyslogAppender") == 0) {
-            std::string sysloghost, syslogname;
-            int facility, portnumber;
-
-            // start with object name
-            tempString = std::string("appender.") + name + std::string(".name");
-            PropertiesMap::iterator key = _properties.find(tempString);
-
-            if (key == _properties.end())
-                objectname = "default";
-            else
-                objectname = (*key).second;
-
-            // get syslog name, i.e. "ident"
-            tempString = std::string("appender.") + name + std::string(".SyslogName");
-            key = _properties.find(tempString);
-
-            if (key == _properties.end())
-                syslogname = "syslog";
-            else
-                syslogname = (*key).second;
+        else if (appenderType == "SyslogAppender") {
+             // get syslog name, i.e. "ident"
+            key = _properties.find(std::string("appender.") + appenderName + ".syslogName");
+            std::string syslogName = (key == _properties.end()) ? "syslog" : (*key).second;
 
             // get syslog host
-            tempString = std::string("appender.") + name + std::string(".SyslogHost");
-            key = _properties.find(tempString);
-
-            if (key == _properties.end())
-                sysloghost = "localhost";
-            else
-                sysloghost = (*key).second;
+            key = _properties.find(std::string("appender.") + appenderName + ".syslogHost");
+            std::string syslogHost = (key == _properties.end()) ? "localhost" : (*key).second;
 
             // get facility
-            tempString = std::string("appender.") + name + std::string(".Facility");
-            key = _properties.find(tempString);
-
-            if (key == _properties.end())
-                facility = -1;
-            else
-                facility = atoi((*key).second.c_str());
+            key = _properties.find(std::string("appender.") + appenderName + ".facility");
+            int facility = (key == _properties.end()) ? -1 : atoi((*key).second.c_str());
 
             // get port number
-            tempString = std::string("appender.") + name + std::string(".Port");
-            key = _properties.find(tempString);
+            key = _properties.find(std::string("appender.") + appenderName + ".port");
+            int portNumber = (key == _properties.end()) ? -1 : atoi((*key).second.c_str());
 
-            if (key == _properties.end())
-                portnumber = -1;
-            else
-                portnumber = atoi((*key).second.c_str());
-
-            // see which parameters we have
-            if (facility != -1 && portnumber != -1)
-                appender = new RemoteSyslogAppender(objectname, syslogname, 
-                                                             sysloghost, facility, portnumber);
-            else if (facility != -1 && portnumber == -1)
-                appender = new RemoteSyslogAppender(objectname, syslogname,
-                                                             sysloghost, facility);
-            else if (facility == -1 && portnumber != -1)
-                appender = new RemoteSyslogAppender(objectname, syslogname, 
-                                                             sysloghost, LOG_USER, portnumber);
-            else
-                appender = new RemoteSyslogAppender(objectname, syslogname, 
-                                                             sysloghost);
-
-            // set the layout
-            setLayout(appender, name);
+            appender = new RemoteSyslogAppender(appenderName, syslogName, 
+                                                syslogHost, facility, portNumber);
         }
-
 #ifdef LOG4CPP_HAVE_LIBIDSA
-        if (appender_type.compare("IdsaAppender") == 0) {
-            std::string idsaname;
-            tempString = std::string("appender.") + name + std::string(".name");
-            PropertiesMap::iterator key = _properties.find(tempString);
+        else if (appenderType == "IdsaAppender") {
+            key = _properties.find(std::string("appender.") + appenderName + ".idsaName");
+            // default idsa name ???
+            std::string idsaName = (key == _properties.end()) ? "foobar" : (*key).second;
 
-            if (key == _properties.end())
-                objectname = "default";
-            else
-                objectname = (*key).second;
-
-            tempString = std::string("appender.") + name + std::string(".Idsaname");
-            key = _properties.find(tempString);
-
-            if (key == _properties.end())
-                idsaname = "foobar";	// default idsa name ???
-            else
-                idsaname = (*key).second;
-
-            appender = new IdsaAppender(objectname, idsaname);
-
-            // set layout
-            setLayout(appender, name);
+            appender = new IdsaAppender(appenderName, idsaname);
         }
 #endif	// LOG4CPP_HAVE_LIBIDSA
 
 #ifdef WIN32
         // win32 debug appender
-        if (appender_type.compare("Win32DebugAppender") == 0) {
-            // check for name
-            tempString = std::string("appender.") + name + std::string(".name");
-            PropertiesMap::iterator key = _properties.find(tempString);
-            if (key == _properties.end())
-                objectname = "default";
-            else
-                objectname = (*key).second;
-
-            appender = new Win32DebugAppender(objectname);
-
-            // set layout
-            setLayout(appender, name);
+        else if (appenderType == "Win32DebugAppender") {
+            appender = new Win32DebugAppender(appenderName);
         }
 #endif	// WIN32
+        else {
+            throw ConfigureFailure(std::string("Appender '") + appenderName + 
+                                   "' has unknown type '" + appenderType + "'");
+        }
 
-        // if we made it this far without creating an appender, then something is wrong
-        // otherwise return what we have
-        if (appender)
-            return appender;
-        else
-            throw ConfigureFailure(std::string("Invalid appender type: see ") + name);
+        if (appender->requiresLayout()) {
+            setLayout(appender, appenderName);
+        }
+
+        return appender;
     }
 
-    void ConfiguratorSkeleton::setLayout(Appender* appender, const std::string& name) {
-        // determine the type by name
-        std::string layout_type;
-        std::string tempString = std::string("appender.") + name + std::string(".layout");
-        PropertiesMap::iterator key = _properties.find(tempString);
+    void ConfiguratorSkeleton::setLayout(Appender* appender, const std::string& appenderName) {
+        // determine the type by appenderName
+        std::string tempString;
+        PropertiesMap::iterator key = 
+            _properties.find(std::string("appender.") + appenderName + ".layout");
 
         if (key == _properties.end())
-            throw ConfigureFailure(std::string("Invalid appender name in setLayout: see") + name);
+            throw ConfigureFailure(std::string("Missing layout property for appender '") + 
+                                   appenderName + "'");
 		
-        int length = (*key).second.find_last_of(".");
-
-        if (length != std::string::npos)
-            layout_type = (*key).second.substr(length+1);
-        else
-            layout_type = (*key).second;
-
+        std::string::size_type length = (*key).second.find_last_of(".");
+        std::string layoutType = (length == std::string::npos) ? 
+            (*key).second : (*key).second.substr(length+1);
+ 
+        Layout* layout;
         // and instantiate the appropriate object
-        if (layout_type.compare("BasicLayout") == 0) {
-            // not much to do here			
-            appender->setLayout(new BasicLayout());
+        if (layoutType == "BasicLayout") {
+            layout = new BasicLayout();
         }
-        else if (layout_type.compare("SimpleLayout") == 0) {
-            // not much here either
-            appender->setLayout(new SimpleLayout());
+        else if (layoutType == "SimpleLayout") {
+            layout = new SimpleLayout();
         }
-        else if (layout_type.compare("PatternLayout") == 0) {
+        else if (layoutType == "PatternLayout") {
             // need to read the properties to configure this one
-            tempString = std::string("appender.") + name + std::string(".layout.ConversionPattern");
-            key = _properties.find(tempString);
+            PatternLayout* patternLayout = new PatternLayout();
 
-            PatternLayout* layout = new PatternLayout();
-
-            // if we found the conversion pattern, set it otherwise use default
-            if (key != _properties.end()) {
-                layout->setConversionPattern((*key).second);
+            key = _properties.find(std::string("appender.") + appenderName + ".layout.ConversionPattern");
+            if (key == _properties.end()) {
+                // leave default pattern
+            } else {
+                // set pattern
+                patternLayout->setConversionPattern((*key).second);
             }
 
-            appender->setLayout(layout);
+            layout = patternLayout;
         }
         else {
-            // if we haven't set a layout, and the appender requires one, we should probably 
-            // at least set the basic layout
-            if (appender->requiresLayout())
-                appender->setLayout(new BasicLayout());
+            throw ConfigureFailure(std::string("Unknown layout type '" + layoutType +
+                                               "' for appender '") + appenderName + "'");
         }
 
-    }
-
-    bool ConfiguratorSkeleton::setPriority(std::string& name, Category& category) {
-        bool ret = false;
-
-        // test for priority name and set priority
-        if (name.compare("DEBUG") == 0) {
-            category.setPriority(Priority::DEBUG);
-            ret = true;
-        } else if (name.compare("INFO") == 0) {
-            category.setPriority(Priority::INFO);
-            ret = true;
-        } else if (name.compare("WARN") == 0) {
-            category.setPriority(Priority::WARN);
-            ret = true;
-        } else if (name.compare("ERROR") == 0) {
-            category.setPriority(Priority::ERROR);
-            ret = true;
-        } else if (name.compare("FATAL") == 0) {
-            category.setPriority(Priority::FATAL);
-            ret = true;
-        }
-
-        return ret;
+        appender->setLayout(layout);
     }
 
     /**
@@ -387,20 +245,18 @@ namespace log4cpp {
      * listings.  Seems like there might be a more elegant solution.
      */
     void ConfiguratorSkeleton::getCategories(std::vector<std::string>& catlist) throw (ConfigureFailure) {
-        int length;
-        std::string catname;
-        PropertiesMap::iterator iter = _properties.begin();
-		
         // add the root category first
         catlist.push_back(std::string("rootCategory"));
 
         // then look for "category."
-        for (;iter != _properties.end(); iter++) {
+        for (PropertiesMap::iterator iter = _properties.begin();
+             iter != _properties.end(); iter++) {
             // get the property name and test against "category."
-            length = (*iter).first.find("category.");
+            std::string::size_type length = (*iter).first.find("category.");
             if (length != std::string::npos) {
                 // found one, so add it to the list
-                catname = (*iter).first.substr(length + std::string("category.").size());
+                std::string catname =
+                    (*iter).first.substr(length + std::string("category.").size());
                 catlist.push_back(catname);
             }
         }
@@ -409,17 +265,16 @@ namespace log4cpp {
     // Tool to remove the white space from both ends:
     std::string ConfiguratorSkeleton::trim(const std::string& s) {
         // test for null string
-        if(s.length() == 0)
+        if(s.empty())
             return s;
 
         // find first non-space character
-        int b = s.find_first_not_of(" \t");
+        std::string::size_type b = s.find_first_not_of(" \t");
+        if(b == std::string::npos) // No non-spaces
+            return "";
 
         // find last non-space character
-        int e = s.find_last_not_of(" \t");
-
-        if(b == -1) // No non-spaces
-            return "";
+        std::string::size_type e = s.find_last_not_of(" \t");
 
         // return the remaining characters
         return std::string(s, b, e - b + 1);
